feat: stable OOP refactoring complete
-  Modular architecture implemented
-  Sensors working (DHT22, Soil Moisture)
-  Actuators working (Relays with inverted logic)
-  HTTP communication with FastAPI server
-  Automatic watering system ready
-  System monitoring and diagnostics
-  Fixed relay logic and inheritance issues

Architecture:
- Sensors/ (Sensor, SoilMoistureSensor, DHT22Sensor, SensorManager)
- Actuators/ (Actuator, Relay, WaterPump, ActuatorManager)
- Network/ (WiFiManager, OTAUpdater, HTTPClient)
- System/ (SettingsManager, TaskScheduler, SystemMonitor)
- Application.h/cpp - main coordinator

The system is now production ready with proper OOP structure

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,13 +1,23 @@
+; platformio.ini
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
+; Библиотеки
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
-    adafruit/DHT sensor library@^1.4.6
-    adafruit/Adafruit Unified Sensor@^1.1.14
+    adafruit/DHT sensor library@^1.4.4
+    adafruit/Adafruit Unified Sensor@^1.1.7
 
+; Настройки сборки
 build_flags = 
-    -D CORE_DEBUG_LEVEL=1
+    -Wno-unused-function
+    -Wno-unused-variable
+
+; Настройки загрузки
+upload_speed = 921600
+
+; Пути исходного кода
+src_dir = src
