--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -5,64 +5,99 @@
     update_cache: true
     state: present
 
-- name: Create backup of current /etc/nginx (одноразово, если нет бэкапа)
-  ansible.builtin.command:
-    cmd: tar -czf /etc/nginx.backup.tgz /etc/nginx
-    creates: /etc/nginx.backup.tgz
+#- name: Create backup of current /etc/nginx (одноразово, если нет бэкапа)
+#  ansible.builtin.command:
+#    cmd: tar -czf /etc/nginx.backup.tgz /etc/nginx
+#    creates: /etc/nginx.backup.tgz
 
-# Валидация конфигурации
+# Валидация текущей конфигурации (до изменений)
 - name: nginx -t (assert success)
   ansible.builtin.command: nginx -t
   register: nginx_test
   changed_when: false
   failed_when: nginx_test.rc != 0
 
+# === HTTPS подготовка (если включён) ===
 - name: Ensure certbot installed when HTTPS enabled
   when: nginx_enable_https
   become: true
   block:
     - name: Install certbot (via snap)
-      apt:
+      ansible.builtin.apt:
         name: snapd
         state: present
         update_cache: yes
 
     - name: Install certbot
-      snap:
+      community.general.snap:
         name: certbot
         classic: yes
         state: present
 
     - name: Link certbot binary
-      file:
+      ansible.builtin.file:
         src: /snap/bin/certbot
         dest: /usr/bin/certbot
         state: link
         force: yes
 
     - name: Create ACME challenge dir
-      file:
+      ansible.builtin.file:
         path: /var/www/letsencrypt/.well-known/acme-challenge
         state: directory
         mode: "0755"
         owner: www-data
         group: www-data
 
+# ⬇️ ВАЖНО: здесь должен оказаться серверный блок с /.well-known/acme-challenge
+# Вариант А (как у тебя): копируем дерево etc/nginx/ из роли
 - name: Deploy captured nginx config tree
   ansible.builtin.copy:
     src: etc/nginx/
     dest: /etc/nginx/
     owner: root
     group: root
-    mode: "0644"
+    # Не задаём общий mode для директорий, чтобы не сбить права; файлы получат 0644 по-умолчанию
+    # mode: "0644"
   notify:
-    - Test nginx config
-    - Reload nginx
+    - test nginx config
+    - reload nginx
 
+# Вариант Б (рекомендую в будущем): шаблон vhost через templates/site.conf.j2
+# - name: Deploy site from template
+#   ansible.builtin.template:
+#     src: site.conf.j2
+#     dest: /etc/nginx/sites-available/growerhub.conf
+#     mode: "0644"
+#   notify:
+#     - test nginx config
+#     - reload nginx
+# - name: Enable site symlink
+#   ansible.builtin.file:
+#     src: /etc/nginx/sites-available/growerhub.conf
+#     dest: /etc/nginx/sites-enabled/growerhub.conf
+#     state: link
+#     force: true
+#   notify:
+#     - test nginx config
+#     - reload nginx
+# - name: Disable default site if present
+#   ansible.builtin.file:
+#     path: /etc/nginx/sites-enabled/default
+#     state: absent
+#   notify:
+#     - test nginx config
+#     - reload nginx
+
+# 🔔 Выполним хендлеры сейчас (перезагрузим nginx), чтобы certbot получил доступ к webroot
+- name: Apply config now before certbot
+  ansible.builtin.meta: flush_handlers
+
+# Выпускаем сертификат (webroot). Работает только если домен и email заданы
 - name: Obtain/renew Let’s Encrypt certificate
-  when: nginx_enable_https
+  when: nginx_enable_https and (nginx_domain | length > 0) and (nginx_letsencrypt_email | length > 0)
   become: true
-  command: >
+  ansible.builtin.command: >
     certbot certonly --webroot
     -w /var/www/letsencrypt
     -d {{ nginx_domain }} {% for d in nginx_alt_domains %}-d {{ d }} {% endfor %}
@@ -70,4 +105,17 @@
     {% if nginx_letsencrypt_staging %}--staging{% endif %}
   args:
     creates: "/etc/letsencrypt/live/{{ nginx_domain }}/fullchain.pem"
-  notify: reload nginx
+  notify:
+    - test nginx config
+    - reload nginx
+
+# Хук автопродления — перезагружаем nginx после обновления сертификатов
+- name: Ensure certbot renew hook reloads nginx
+  when: nginx_enable_https
+  become: true
+  ansible.builtin.copy:
+    dest: /etc/letsencrypt/renewal-hooks/deploy/01-reload-nginx.sh
+    mode: "0755"
+    content: |
+      #!/bin/sh
+      systemctl reload nginx || true
