Отлажена роль Nginx в ansible: cайт и FastAPI доступны по HTTPS, редирект с 80 на 443

--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,5 +1,7 @@
 [app]
 192.168.0.11 ansible_user=watering-admin
+192.168.0.11 ansible_python_interpreter=/usr/bin/python3
 
 [growerhub_server]
 192.168.0.11 ansible_user=watering-admin
+192.168.0.11 ansible_python_interpreter=/usr/bin/python3
