--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,7 +3,11 @@ inventory = ./inventory/hosts.ini
 roles_path = ./roles
 host_key_checking = False
 retry_files_enabled = False
-stdout_callback = yaml
+
+#stdout_callback = yaml
+stdout_callback = default
+result_format = yaml
+
 bin_ansible_callbacks = True
 interpreter_python = auto
 forks = 10
