--- a/ansible/roles/nginx/tasks/main.yml
+++ b/ansible/roles/nginx/tasks/main.yml
@@ -5,10 +5,10 @@
     update_cache: true
     state: present
 
-- name: Create backup of current /etc/nginx (одноразово, если нет бэкапа)
-  ansible.builtin.command:
-    cmd: tar -czf /etc/nginx.backup.tgz /etc/nginx
-    creates: /etc/nginx.backup.tgz
+#- name: Create backup of current /etc/nginx (одноразово, если нет бэкапа)
+#  ansible.builtin.command:
+#    cmd: tar -czf /etc/nginx.backup.tgz /etc/nginx
+#    creates: /etc/nginx.backup.tgz
 
 # Валидация текущей конфигурации (до изменений)
 - name: nginx -t (assert success)
@@ -16,6 +16,23 @@
   register: nginx_test
   changed_when: false
   failed_when: nginx_test.rc != 0
+
+- name: Remove other enabled sites (keep only growerhub.conf)
+  become: true
+  find:
+    paths: /etc/nginx/sites-enabled
+    file_type: any
+  register: enabled_sites
+
+- name: Disable stray sites
+  become: true
+  file:
+    path: "{{ item.path }}"
+    state: absent
+  loop: "{{ enabled_sites.files | rejectattr('path','equalto','/etc/nginx/sites-enabled/growerhub.conf') | list }}"
+  notify:
+    - test nginx config
+    - reload nginx
 
 # === HTTPS подготовка (если включён) ===
 - name: Ensure certbot installed when HTTPS enabled
@@ -51,43 +68,53 @@
 
 # ⬇️ ВАЖНО: здесь должен оказаться серверный блок с /.well-known/acme-challenge
 # Вариант А (как у тебя): копируем дерево etc/nginx/ из роли
-- name: Deploy captured nginx config tree
-  ansible.builtin.copy:
-    src: etc/nginx/
-    dest: /etc/nginx/
-    owner: root
-    group: root
+#- name: Deploy captured nginx config tree
+#  ansible.builtin.copy:
+#    src: etc/nginx/
+#    dest: /etc/nginx/
+#    owner: root
+#    group: root
     # Не задаём общий mode для директорий, чтобы не сбить права; файлы получат 0644 по-умолчанию
     # mode: "0644"
+#  notify:
+#    - test nginx config
+#    - reload nginx
+
+- name: Check if LE cert exists
+  ansible.builtin.stat:
+    path: "/etc/letsencrypt/live/{{ nginx_domain }}/fullchain.pem"
+  register: le_cert
+
+- name: Set flag if cert ready
+  ansible.builtin.set_fact:
+    nginx_cert_ready: "{{ le_cert.stat.exists | default(false) }}"
+
+- name: Deploy site from template
+  ansible.builtin.template:
+    src: site.conf.j2
+    dest: /etc/nginx/sites-available/growerhub.conf
+    mode: "0644"
   notify:
     - test nginx config
     - reload nginx
 
-# Вариант Б (рекомендую в будущем): шаблон vhost через templates/site.conf.j2
-# - name: Deploy site from template
-#   ansible.builtin.template:
-#     src: site.conf.j2
-#     dest: /etc/nginx/sites-available/growerhub.conf
-#     mode: "0644"
-#   notify:
-#     - test nginx config
-#     - reload nginx
-# - name: Enable site symlink
-#   ansible.builtin.file:
-#     src: /etc/nginx/sites-available/growerhub.conf
-#     dest: /etc/nginx/sites-enabled/growerhub.conf
-#     state: link
-#     force: true
-#   notify:
-#     - test nginx config
-#     - reload nginx
-# - name: Disable default site if present
-#   ansible.builtin.file:
-#     path: /etc/nginx/sites-enabled/default
-#     state: absent
-#   notify:
-#     - test nginx config
-#     - reload nginx
+- name: Enable site symlink
+  ansible.builtin.file:
+    src: /etc/nginx/sites-available/growerhub.conf
+    dest: /etc/nginx/sites-enabled/growerhub.conf
+    state: link
+    force: true
+  notify:
+    - test nginx config
+    - reload nginx
+
+- name: Disable default site if present
+  ansible.builtin.file:
+    path: /etc/nginx/sites-enabled/default
+    state: absent
+  notify:
+    - test nginx config
+    - reload nginx
 
 # 🔔 Выполним хендлеры сейчас (перезагрузим nginx), чтобы certbot получил доступ к webroot
 - name: Apply config now before certbot
@@ -108,6 +135,28 @@
   notify:
     - test nginx config
     - reload nginx
+
+- name: Re-check if LE cert exists (post-issue)
+  when: nginx_enable_https
+  ansible.builtin.stat:
+    path: "/etc/letsencrypt/live/{{ nginx_domain }}/fullchain.pem"
+  register: le_cert_after
+
+- name: Set flag if cert ready (post-issue)
+  when: nginx_enable_https
+  ansible.builtin.set_fact:
+    nginx_cert_ready: "{{ le_cert_after.stat.exists | default(false) }}"
+
+- name: Re-deploy site with HTTPS server block
+  when: nginx_enable_https and nginx_cert_ready
+  ansible.builtin.template:
+    src: site.conf.j2
+    dest: /etc/nginx/sites-available/growerhub.conf
+    mode: "0644"
+  notify:
+    - test nginx config
+    - reload nginx
+
 
 # Хук автопродления — перезагружаем nginx после обновления сертификатов
 - name: Ensure certbot renew hook reloads nginx
