feat(firmware): initial MQTT integration step1 (WiFi connect, subscribe cmd)
- add WiFi connect helper in STA mode with placeholder credentials

- configure MQTT client with credentials and subscribe gh/dev/ESP32_2C294C/cmd

- log incoming command payloads via Serial for debugging

- add MQTT reconnection interval to resubscribe after drops

- note: no pump control / no ACK / no state yet

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,6 +10,7 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     adafruit/DHT sensor library@^1.4.4
     adafruit/Adafruit Unified Sensor@^1.1.7
+    knolleary/PubSubClient@^2.8
 
 ; Настройки сборки
 build_flags = 
