test: commit from Windows VS Code

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,6 +3,9 @@ name: CI/CD (test → deploy)
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - "server/**"
+      - "static/**"
   workflow_dispatch:
 
 jobs:
