test(wifi): add minimal WiFiService tests with Unity; introduce WiFiShim and fakes

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -23,3 +23,14 @@ upload_speed = 921600
 ; Пути исходного кода
 src_dir = src
 
+[env:wifi_service_test]
+platform = native
+test_build_project_src = true
+build_src_filter =
+    +<Network/WiFiService.cpp>
+build_flags =
+    -DUNIT_TEST
+    -Isrc
+test_filter = wifi_service_basic
+
+
