--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -1,4 +1,8 @@
 ; platformio.ini
+
+[platformio]
+src_dir = src
+
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
@@ -6,31 +10,32 @@ framework = arduino
 monitor_speed = 115200
 
 ; Библиотеки
-lib_deps = 
+lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     adafruit/DHT sensor library@^1.4.4
     adafruit/Adafruit Unified Sensor@^1.1.7
     knolleary/PubSubClient@^2.8
 
 ; Настройки сборки
-build_flags = 
+build_flags =
     -Wno-unused-function
     -Wno-unused-variable
 
 ; Настройки загрузки
 upload_speed = 921600
 
-; Пути исходного кода
-src_dir = src
-
 [env:wifi_service_test]
 platform = native
-test_build_project_src = true
+platform_packages = toolchain-gccmingw32
+test_build_src = yes
+extra_scripts =
+    scripts/setup_native_toolchain.py
 build_src_filter =
     +<Network/WiFiService.cpp>
+    +<Network/WiFiShim.cpp>
+    +<NativeTestMain.cpp>
 build_flags =
     -DUNIT_TEST
+    -std=gnu++11
     -Isrc
 test_filter = wifi_service_basic
-
-
