--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -26,16 +26,10 @@ upload_speed = 921600
 
 [env:wifi_service_test]
 platform = native
-platform_packages = toolchain-gccmingw32
+test_framework = unity
 test_build_src = yes
-extra_scripts =
-    scripts/setup_native_toolchain.py
-build_src_filter =
-    +<Network/WiFiService.cpp>
-    +<Network/WiFiShim.cpp>
-    +<NativeTestMain.cpp>
 build_flags =
     -DUNIT_TEST
     -std=gnu++11
     -Isrc
-test_filter = wifi_service_basic
+; пока без test_filter
