test(wifi): add FakeWiFi.cpp fakes to run WiFiService tests

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -26,10 +26,17 @@ upload_speed = 921600
 
 [env:wifi_service_test]
 platform = native
+platform_packages = toolchain-gccmingw32
 test_framework = unity
+extra_scripts =
+    scripts/setup_native_toolchain.py
 test_build_src = yes
+build_src_filter =
+    +<Network/WiFiService.cpp>
+    +<../test/fakes/FakeWiFi.cpp>
 build_flags =
     -DUNIT_TEST
     -std=gnu++11
     -Isrc
-; пока без test_filter
+    -Itest/fakes
+test_filter = test_wifi_service_basic
