--- a/.github/workflows/ci-firmware.yml
+++ b/.github/workflows/ci-firmware.yml
@@ -2,9 +2,10 @@ name: WiFiService Tests
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches: [ "main" ]
+    paths:
+      - "firmware/**"
+  workflow_dispatch:
 
 jobs:
   tests:
