test(firmware): add Unity tests for SystemClock with fakes and separate native env

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -40,3 +40,24 @@ build_flags =
     -Isrc
     -Itest/fakes
 test_filter = test_wifi_service_basic
+
+[env:system_clock_test]
+platform = native
+platform_packages = toolchain-gccmingw32
+test_framework = unity
+extra_scripts =
+    scripts/setup_native_toolchain.py
+test_build_src = yes
+build_src_filter =
+    +<System/SystemClock.cpp>
+    +<../test/fakes/FakeMillis.cpp>
+    +<../test/fakes/FakeRTC.cpp>
+    +<../test/fakes/FakeNTPClient.cpp>
+    +<../test/fakes/FakeScheduler.cpp>
+    +<../test/fakes/FakeTime.cpp>
+build_flags =
+    -DUNIT_TEST
+    -std=gnu++11
+    -Isrc
+    -Itest/fakes
+test_filter = test_system_clock_basic
