--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -34,22 +34,8 @@ test_build_src = yes
 build_src_filter =
     +<Network/WiFiService.cpp>
     +<../test/fakes/FakeWiFi.cpp>
-build_flags =
-    -DUNIT_TEST
-    -std=gnu++11
-    -Isrc
-    -Itest/fakes
-test_filter = test_wifi_service_basic
-
-[env:system_clock_test]
-platform = native
-platform_packages = toolchain-gccmingw32
-test_framework = unity
-extra_scripts =
-    scripts/setup_native_toolchain.py
-test_build_src = yes
-build_src_filter =
     +<System/SystemClock.cpp>
+    +<System/Time/>
     +<../test/fakes/FakeMillis.cpp>
     +<../test/fakes/FakeRTC.cpp>
     +<../test/fakes/FakeNTPClient.cpp>
@@ -60,4 +46,4 @@ build_flags =
     -std=gnu++11
     -Isrc
     -Itest/fakes
-test_filter = test_system_clock_basic
+test_filter = test_wifi_service_basic, test_system_clock_basic
