--- a/.github/workflows/loc-badge.yml
+++ b/.github/workflows/loc-badge.yml
@@ -21,10 +21,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Install cloc & jq
-        env:
-          DEBIAN_FRONTEND: noninteractive
+          
+      - name: Install cloc (portable) & jq
         run: |
-          sudo apt-get update
-          sudo apt-get install -y --no-install-recommends cloc jq
+          curl -L https://github.com/AlDanial/cloc/releases/download/v1.98/cloc-1.98.pl -o cloc
+          chmod +x cloc
+          sudo mv cloc /usr/local/bin/cloc
+          sudo apt-get update && sudo apt-get install -y --no-install-recommends jq
