feat(firmware): handle reboot command with safe pump stop and restart

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -9,6 +9,9 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 
+# Unit-testy dlya etogo env propuskayem (zapuskayutsya v native wifi_service_test)
+test_ignore = test_system_clock_basic, test_wifi_service_basic
+
 ; Библиотеки
 lib_deps =
     bblanchon/ArduinoJson@^6.21.3
