feat(firmware): safe reboot via SystemMonitor; DHT22 auto-reboot trigger; MQTT ACK routing; unit tests

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -38,15 +38,18 @@ build_src_filter =
     +<Network/WiFiService.cpp>
     +<../test/fakes/FakeWiFi.cpp>
     +<System/SystemClock.cpp>
+    +<System/SystemMonitor.cpp>
+    +<System/Dht22RebootHelper.cpp>
     +<System/Time/>
     +<../test/fakes/FakeMillis.cpp>
     +<../test/fakes/FakeRTC.cpp>
     +<../test/fakes/FakeNTPClient.cpp>
     +<../test/fakes/FakeScheduler.cpp>
     +<../test/fakes/FakeTime.cpp>
+    +<../test/fakes/Arduino.cpp>
 build_flags =
     -DUNIT_TEST
     -std=gnu++11
     -Isrc
     -Itest/fakes
-test_filter = test_wifi_service_basic, test_system_clock_basic
+test_filter = test_wifi_service_basic, test_system_clock_basic, test_system_monitor_reboot, test_dht22_reboot_trigger
