OTA repairing step 1

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -20,6 +20,9 @@ lib_deps =
     knolleary/PubSubClient@^2.8
 
 ; Настройки сборки
+; OTA parol mozhno pereopredelit tak:
+; build_flags =
+;     -D OTA_PASSWORD=\"super-sekret\"
 build_flags =
     -Wno-unused-function
     -Wno-unused-variable
