update hosts.ini. : roles on different vm.

--- a/ansible/inventory/hosts.ini
+++ b/ansible/inventory/hosts.ini
@@ -1,7 +1,60 @@
+# ---------------------------------
+# Старый монолитный сервер GrowerHub
+# (как было раньше, трогать аккуратно)
+# ---------------------------------
 [app]
-192.168.0.11 ansible_user=watering-admin
-192.168.0.11 ansible_python_interpreter=/usr/bin/python3
+192.168.0.11 ansible_user=watering-admin ansible_python_interpreter=/usr/bin/python3
 
 [growerhub_server]
-192.168.0.11 ansible_user=watering-admin
-192.168.0.11 ansible_python_interpreter=/usr/bin/python3
+192.168.0.11 ansible_user=watering-admin ansible_python_interpreter=/usr/bin/python3
+
+
+# ---------------------------------
+# Управляющий узел Ansible
+# ---------------------------------
+[ansible_host]
+ansible-host ansible_host=192.168.0.80 ansible_user=gh
+
+
+# ---------------------------------
+# Новые GH-ноды по ролям
+# IP: 192.168.0.81+ (по одной ВМ на роль)
+# Эти ВМ должны быть созданы из нашего шаблона с пользователем gh
+# ---------------------------------
+
+[gh_db]
+gh-db ansible_host=192.168.0.81 ansible_user=gh
+
+[gh_app]
+gh-app ansible_host=192.168.0.82 ansible_user=gh
+
+[gh_nginx]
+gh-nginx ansible_host=192.168.0.83 ansible_user=gh
+
+[gh_mqtt]
+gh-mqtt ansible_host=192.168.0.84 ansible_user=gh
+
+[gh_tools]
+gh-tools ansible_host=192.168.0.85 ansible_user=gh
+
+
+# ---------------------------------
+# Все GH-ноды (для базового конфига)
+# ---------------------------------
+[gh_all:children]
+gh_db
+gh_app
+gh_nginx
+gh_mqtt
+gh_tools
+
+
+# ---------------------------------
+# Прод-контур (пока один)
+# ---------------------------------
+[gh_prod:children]
+gh_db
+gh_app
+gh_nginx
+gh_mqtt
+gh_tools
