Update PostgreSQL version to 16 in gh-db.yml

--- a/ansible/host_vars/gh-db.yml
+++ b/ansible/host_vars/gh-db.yml
@@ -1,5 +1,5 @@
 # Переменные для сервера gh-db (192.168.0.81)
-postgresql_version: 14
+postgresql_version: 16
 postgresql_conf_dir: "/etc/postgresql/{{ postgresql_version }}/main"
 postgresql_conf_path: "{{ postgresql_conf_dir }}/postgresql.conf"
 pg_hba_conf_path: "{{ postgresql_conf_dir }}/pg_hba.conf"
@@ -7,8 +7,8 @@ pg_hba_conf_path: "{{ postgresql_conf_dir }}/pg_hba.conf"
 # Основные параметры базы данных
 gh_db_name: "gh_db"
 gh_db_admin_user: "db-admin"
-postgresql_conf_path: "/etc/postgresql/16/main/postgresql.conf"
-postgresql_hba_path: "/etc/postgresql/16/main/pg_hba.conf"
+# postgresql_conf_path: "/etc/postgresql/16/main/postgresql.conf"
+# postgresql_hba_path: "/etc/postgresql/16/main/pg_hba.conf"
 # TODO: перенести пароль gh_db_admin_password в защищённое хранилище
 gh_db_admin_password: "ЗАГЛУШКА_СЮДА_ПАРОЛЬ_ПОТОМ_ПОМЕНЯЕМ"
 
