Add PostgreSQL driver for app

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,5 +7,6 @@ httpx<0.28
 pytest-asyncio
 pytest
 paho-mqtt>=2.1.0
-# NOTE: psycopg2-binary requires system dependencies that may not be available in the CI environment.
-# Since the application defaults to an SQLite database for tests, we omit it from the requirements.
+# NOTE: psycopg2-binary treboval sistemnye biblioteki, poetomu ran'she ego propuskali v testovom CI.
+# Dlya prod-razvertki na gh-db vse zavisimosti ustanavlivayutsya cherez Ansible, poetomu dobavlyaem ego zdes'.
+psycopg2-binary==2.9.9  # Vremennoe reshenie dlya prod-servera gh-db
