--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.104.1
+﻿fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
+alembic>=1.13.1
 pydantic==2.5.0
 python-multipart==0.0.6
 httpx<0.28
