Disable DEBUG pytest step in ci-cd.yml
Comment out the DEBUG pytest step in CI/CD workflow.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -60,11 +60,11 @@ jobs:
           . .venv/bin/activate
           alembic upgrade head
 
-      - name: Run pytest DEBUG
-        working-directory: server
-        run: |
-          . .venv/bin/activate
-          pytest tests/test_auth_users.py::test_diag_authenticate_local_user_steps -q
+      #- name: Run pytest DEBUG
+      #  working-directory: server
+      #  run: |
+      #    . .venv/bin/activate
+      #    pytest tests/test_auth_users.py::test_diag_authenticate_local_user_steps -q
           
       - name: Run pytest
         working-directory: server
