--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -56,6 +56,8 @@ jobs:
 
       - name: Run Alembic migrations
         working-directory: server
+        env:
+          DATABASE_URL: postgresql+psycopg2://watering_user:watering_pass@localhost:5432/watering_db
         run: |
           . .venv/bin/activate
           alembic upgrade head
@@ -68,6 +70,8 @@ jobs:
           
       - name: Run pytest
         working-directory: server
+        env:
+          DATABASE_URL: postgresql+psycopg2://watering_user:watering_pass@localhost:5432/watering_db
         run: |
           . .venv/bin/activate
           pytest -q --maxfail=1 --disable-warnings --junitxml=pytest-report.xml
