--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,20 +12,6 @@ jobs:
   test:
     name: Test (pytest)
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:15
-        env:
-          POSTGRES_DB: watering_db
-          POSTGRES_USER: watering_user
-          POSTGRES_PASSWORD: watering_pass
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd "pg_isready -U watering_user -d watering_db"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -51,15 +37,11 @@ jobs:
           pip install -r requirements.txt || true
           pip install pytest
 
-      - name: Set DATABASE_URL
-        run: echo "DATABASE_URL=postgresql+psycopg2://watering_user:watering_pass@localhost:5432/watering_db" >> $GITHUB_ENV
-
       - name: Run Alembic migrations
         working-directory: server
-        env:
-          DATABASE_URL: postgresql+psycopg2://watering_user:watering_pass@localhost:5432/watering_db
         run: |
           . .venv/bin/activate
+          rm -f local.db
           alembic upgrade head
 
       #- name: Run pytest DEBUG
@@ -70,8 +52,6 @@ jobs:
           
       - name: Run pytest
         working-directory: server
-        env:
-          DATABASE_URL: postgresql+psycopg2://watering_user:watering_pass@localhost:5432/watering_db
         run: |
           . .venv/bin/activate
           pytest -q --maxfail=1 --disable-warnings --junitxml=pytest-report.xml
